# pycountingv1

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/pycountingv1/: __init__.py  plotting.py
tests/: test_pycountingv1.py
