[tool.poetry]
name = "pycountingv1"
version = "0.1.0"
description = "cal word count"
authors = ["Fazeeia Mohammed"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.10.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
